--- a/app/src/main/res/layout/layout_comments.xml
+++ b/app/src/main/res/layout/layout_comments.xml
@@ -5,27 +5,27 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  android:padding="@dimen/margin_basic">
+  android:orientation="vertical"
+  android:paddingTop="@dimen/margin_half"
+  android:paddingBottom="@dimen/margin_half">
 
   <TextView
-    android:id="@+id/post_title"
-    android:layout_width="match_parent"
+    android:id="@+id/comment_name"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textColor="@color/colorText"
-    android:textSize="18sp"
+    android:textSize="14sp"
     android:textStyle="bold"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    tools:text="Sample Text" />
+    tools:text="I am the hero" />
 
   <TextView
-    android:id="@+id/post_body"
-    android:layout_width="match_parent"
+    android:id="@+id/comment_body"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:textColor="@color/colorText"
+    android:textSize="12sp"
     app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/post_title"
-    tools:text="Hello, my name is Alan. Nice to meet you all! This text is body of the post." />
+    app:layout_constraintTop_toBottomOf="@+id/comment_name"
+    tools:text="id labore ex et quam laborum" />
 
 </android.support.constraint.ConstraintLayout>
