--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
   <color name="colorAccent">#D81B60</color>
 
   <color name="colorText">#333333</color>
+  <color name="colorTextLight">#666666</color>
   <color name="colorSurface">#FFFFFF</color>
 </resources>
