--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+  <dimen name="margin_half">8dp</dimen>
   <dimen name="margin_basic">16dp</dimen>
+  <dimen name="margin_double">32dp</dimen>
 </resources>
