--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -4,7 +4,9 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  android:layout_height="match_parent"
+  android:background="@color/colorSurface"
+  tools:context=".ui.details.DetailsActivity">
 
   <android.support.v7.widget.Toolbar
     android:id="@+id/details_toolbar"
@@ -22,10 +24,10 @@
   <android.support.v4.widget.NestedScrollView
     android:layout_width="0dp"
     android:layout_height="0dp"
-    app:layout_constraintTop_toBottomOf="@+id/details_toolbar"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent">
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/details_toolbar">
 
     <LinearLayout
       android:layout_width="match_parent"
