--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:background="@color/colorSurface"
   tools:context=".ui.main.MainActivity">
 
   <android.support.v7.widget.Toolbar
@@ -23,10 +24,10 @@
     android:id="@+id/content_list"
     android:layout_width="0dp"
     android:layout_height="0dp"
-    app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
     tools:listitem="@layout/layout_post">
 
   </android.support.v7.widget.RecyclerView>
